# fast_zero

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml  pipeline.yml
app/: database.py  main.py  models.py  schemas.py  security.py
app/core/: config.py  security.py
app/database/: models.py  session.py
app/repositories/: task_repository.py  user_repository.py
app/routers/: __init__.py  auth.py  tasks.py  users.py
app/routers/v1/: __init__.py
app/routers/v1/endpoints/: auth_controller.py  task_controller.py  user_controller.py
app/schemas/: base.py  tasks.py  token.py  users.py
app/services/: task_service.py  user_service.py
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routes/: __init__.py  auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 020916cca0d0_create_task_table.py  40f440cfdea4_implement_the_updated_at_attribute_in_.py  42fb4038727f_create_users_table.py  451b83ceb512_implement_the_updated_at_attribute_in_.py  a710ff4e5fc8_create_users_table.py  c255d544d01b_create_users_table.py
tests/: conftest.py  factories.py  factory.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_tasks.py  test_todos.py  test_users.py
tests/controllers/: test_auth_controllers.py  test_task_controllers.py  test_user_controllers.py
tests/repositories/: test_task_repository.py  test_user_repository.py
tests/services/: test_task_service.py  test_user_service.py
