[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["mateus-dev-me <mateusmartinsipu2@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_zero"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
email-validator = "^2.0.0.post2"
sqlalchemy = "^2.0.19"
pydantic-settings = "^2.0.2"
alembic = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
taskipy = "^1.11.0"
blue = "^0.9.1"
isort = "^5.12.0"
ruff = "^0.0.278"
httpx = "^0.24.1"

[tool.ruff]
line-length = 79
exclude = [
  ".venv", 
  "migrations",
  ".ruff_cache"
]

[tool.isort]
profile = "back"
line-length = 79

[tool.pytest.ini_options]
pythonpath = "." 

[tool.blue.ini_options]
exclude = '(migrations/)' 

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue . && isort .'
run = 'uvicorn fast_zero.app:app --reload'
clean = 'find . | grep -E "(/__pycache__$|\.pyc$|\.pyo$)" | xargs rm -rf'
alembic = 'alembic upgrade head'
pre_test = 'task lint && task clean'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
